cabal-version:      3.0
name:               haskell-book
version:            0.1.0.0
synopsis:           Code snippets for book
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Jeffrey Dwyer
maintainer:         jeffreydwyer95@outlook.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  HelloWorld
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.0
    hs-source-dirs:   snippet
    default-language: GHC2021
